--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -2,3 +2,13 @@
   font-family: "Inter", Arial, sans-serif;
   margin-top: 30px;
 }
+
+.cards__list {
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(auto-fit, 282px);
+  grid-gap: 20px 17px;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
