--- a/blocks/card.css
+++ b/blocks/card.css
@@ -39,3 +39,13 @@
   height: 18px;
   border: none;
 }
+
+.card__like-button:hover {
+  opacity: 0.5;
+}
+
+@media screen and (max-width: 620px) {
+  .card__list {
+    padding: 20px;
+  }
+}
