--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,5 +1,4 @@
 .footer {
-  height: 125px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -7,4 +6,28 @@
   width: 100%;
   position: relative;
   margin: 0 auto;
+  padding: 67px 0 60px 0;
+}
+
+.footer__info {
+  color: #545454;
+  font-family: "Inter", Arial, sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 22px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+
+@media screen and (max-width: 940px) {
+  .footer {
+    max-width: 585px;
+  }
+}
+
+@media screen and (max-width: 580px) {
+  .footer {
+    max-width: calc(100% - 30px);
+    padding-left: 19px;
+  }
 }
