--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -11,17 +11,19 @@
   grid-template-areas:
     "title button"
     "description description";
-  grid-template-columns: minmax(auto, 415px) auto;
+  grid-template-columns: minmax(auto, 373px) auto;
   grid-column-gap: 18px;
 }
 
 .profile__edit-button {
-  background: transparent url(../images/edit-button.svg) center no-repeat;
+  background: transparent url(../images/edit-vector.svg) center no-repeat;
   height: 24px;
   width: 24px;
   margin: 0;
   white-space: nowrap;
-  border: none;
+  border: 1px solid white;
+  align-self: center;
+  cursor: pointer;
 }
 
 .profile__edit-button:hover {
@@ -29,11 +31,12 @@
 }
 
 .profile__add-button {
-  background: transparent url(../images/addreg.svg) center no-repeat;
+  background: transparent url(../images/add-vector.svg) center no-repeat;
   width: 150px;
   height: 50px;
   margin-left: auto;
-  border: none;
+  border: 1px solid white;
+  cursor: pointer;
 }
 
 .profile__add-button:hover {
@@ -75,22 +78,31 @@
 }
 
 @media screen and (max-width: 940px) {
-  .page__section {
-    max-width: 725px;
-  }
-
-  .profile__title {
-    font-size: 35px;
-  }
-
-  .profile__description {
-    font-size: 16px;
-  }
-
   .profile__info {
-    max-width: 400px;
+    grid-template-columns: auto;
   }
 }
+
+@media screen and (max-width: 775px) {
+  .profile__title {
+    font-size: 39px;
+  }
+
+  .profile__edit-button {
+    margin-right: 8px;
+  }
+
+  .profile__image {
+    margin-right: 10px;
+  }
+
+  .profile__add-button {
+    width: 50px;
+    height: 50px;
+    border: 1px solid white;
+  }
+}
+
 @media screen and (max-width: 620px) {
   .profile {
     flex-direction: column;
@@ -118,21 +130,15 @@
     text-align: center;
   }
 
-  .profile__edit_button {
-    margin-left: 12px;
+  .profile__edit-button {
     height: 18px;
     width: 18px;
+    border: 1px solid white;
   }
 
   .profile__add-button {
+    background: transparent url(../images/add-vector.svg) center no-repeat;
     margin: 0;
-    width: 100%;
-    border: none;
-  }
-}
-
-@media screen and (max-width: 415px) {
-  .profile__add-button {
     width: 282px;
     height: 50px;
   }
