--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -45,7 +45,7 @@
   font-family: "Inter", Arial, sans-serif;
 }
 
-.field1 {
+.nameField {
   margin-bottom: 17px;
   padding-bottom: 13px;
   border: none;
@@ -53,7 +53,7 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
-.field2 {
+.descriptionField {
   margin-bottom: 35px;
   padding-bottom: 13px;
   border: none;
@@ -106,13 +106,13 @@
     line-height: 17px;
   }
 
-  .field1 {
+  .nameField {
     margin-bottom: 30px;
     padding-bottom: 13px;
     width: 238px;
   }
 
-  .field2 {
+  .descriptionField {
     width: 238px;
     margin-bottom: 45px;
   }
