--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -45,7 +45,7 @@
   font-family: "Inter", Arial, sans-serif;
 }
 
-.nameField {
+.modal__form_name-field {
   margin-bottom: 17px;
   padding-bottom: 13px;
   border: none;
@@ -53,7 +53,7 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
-.descriptionField {
+.modal__form_description-field {
   margin-bottom: 35px;
   padding-bottom: 13px;
   border: none;
