modal responsive design

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -45,7 +45,7 @@
   font-family: "Inter", Arial, sans-serif;
 }
 
-.modal__form_name-field {
+.modal__input {
   margin-bottom: 17px;
   padding-bottom: 13px;
   border: none;
@@ -53,7 +53,7 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
-.modal__form_description-field {
+.modal__input:last-of-type {
   margin-bottom: 35px;
   padding-bottom: 13px;
   border: none;
@@ -61,15 +61,20 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
-.modal__button {
+.modal__save-button {
   background-color: #000;
   color: #fff;
-  width: 358px;
+  /* width: 358px; */
   height: 50px;
   border-radius: 2px;
   font-family: "Inter", Arial, sans-serif;
   font-size: 18px;
   font-weight: 400;
+  border: none;
+}
+
+.modal__save-button:hover {
+  cursor: pointer;
 }
 
 .modal__close {
@@ -78,42 +83,50 @@
   position: absolute;
   bottom: calc(100% + 5px);
   left: calc(100% + 5px);
-  width: 40px;
+  /* width: 40px; */
   height: 40px;
   background-image: url(../images/close.svg);
   background-repeat: no-repeat;
   background-size: contain;
 }
 
+.modal__close:hover {
+  cursor: pointer;
+}
+
 @media screen and (max-width: 580px) {
   .modal__container {
-    padding: 25px 22px;
+    padding: 25px;
+    margin: 0 19px;
+    max-width: 100%;
+  }
+  /* padding: 25px 22px;
     height: 322px;
-  }
+    margin: 123px 19px; */
+}
 
-  .modal__heading {
-    margin: 0 0 75px 0;
-  }
+.modal__heading {
+  margin: 0 0 75px 0;
+}
 
-  .modal__button {
-    width: 238px;
-    height: 46px;
-    border-radius: 2px;
-    font-family: "Inter", Arial, sans-serif;
-    font-size: 14px;
-    font-weight: 400;
-    margin-bottom: 0;
-    line-height: 17px;
-  }
+.modal__button {
+  /* width: 238px; */
+  height: 46px;
+  border-radius: 2px;
+  font-family: "Inter", Arial, sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  margin-bottom: 0;
+  line-height: 17px;
+}
 
-  .nameField {
-    margin-bottom: 30px;
-    padding-bottom: 13px;
-    width: 238px;
-  }
+.modalForm {
+  margin-bottom: 30px;
+  padding-bottom: 13px;
+  /* width: 238px; */
+}
 
-  .descriptionField {
-    width: 238px;
-    margin-bottom: 45px;
-  }
+.modal__input:last-of-type {
+  /* width: 238px; */
+  margin-bottom: 45px;
 }
