--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -44,6 +44,7 @@
 
 .modal__close:hover {
   cursor: pointer;
+  opacity: 60%;
 }
 
 .modal__heading {
@@ -75,7 +76,6 @@
 
 .modal__input:last-of-type {
   margin-bottom: 35px;
-  padding-bottom: 13px;
   border: none;
   outline: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
@@ -94,6 +94,7 @@
 
 .modal__save-button:hover {
   cursor: pointer;
+  opacity: 80%;
 }
 
 @media screen and (max-width: 580px) {
@@ -120,11 +121,6 @@
     margin: 0 0 75px 0;
     font-size: 18px;
     line-height: 21.78px;
-  }
-
-  .modalForm {
-    margin-bottom: 30px;
-    padding-bottom: 13px;
   }
 
   .modal__input:last-of-type {
