--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -43,7 +43,7 @@
   opacity: 0.5;
 }
 
-.profile__title {
+.profile__name {
   font-family: "Inter", Arial, sans-serif;
   font-size: 42px;
   line-height: 48px;
@@ -84,7 +84,7 @@
 }
 
 @media screen and (max-width: 775px) {
-  .profile__title {
+  .profile__name {
     font-size: 39px;
   }
 
@@ -113,7 +113,7 @@
     margin: 0;
   }
 
-  .profile__title {
+  .profile__name {
     font-size: 22px;
     max-width: 232px;
   }
