transition modal windows

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -15,10 +15,16 @@
   align-items: center;
   display: none;
   overflow: hidden;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s linear 0.5s, opacity 0.5s linear;
 }
 
 .modal_opened {
   display: flex;
+  visibility: visible;
+  opacity: 1;
+  transition-delay: 0s;
 }
 
 .modal__container {
@@ -101,10 +107,8 @@
 .modal__preview-image {
   max-width: 75vw;
   max-height: 75vh;
-  overflow: hidden;
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 
 @media screen and (max-width: 580px) {
@@ -152,5 +156,9 @@
   .modal {
     justify-content: initial;
     padding: initial;
+  }
+
+  #preview-image-modal {
+    justify-content: center;
   }
 }
