--- a/blocks/card.css
+++ b/blocks/card.css
@@ -12,6 +12,12 @@
   height: 282px;
 }
 
+.card__image:hover {
+  width: 282px;
+  height: 282px;
+  cursor: pointer;
+}
+
 .card__description {
   display: flex;
   background-color: white;
