--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -142,14 +142,14 @@
   }
 
   .modal__container_preview-image {
-    padding: 0;  
+    padding: 0;
     height: auto;
     width: auto;
     max-width: 75vw;
     max-height: 75vh;
     display: flex;
     background: transparent;
-    flex-direction: column; */
+    flex-direction: column;
   }
 
   .modal__close {
