--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -89,6 +89,7 @@
   font-size: 14px;
   font-weight: 400;
   line-height: 16.94px;
+  width: 100%;
 }
 
 .modal__input:last-of-type {
@@ -96,6 +97,33 @@
   border: none;
   outline: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.modal__label {
+  /* display: block; */
+  color: red;
+  /* margin-top: 5px; */
+  position: relative;
+}
+
+.modal__input_type_error {
+}
+
+#owner-name-error {
+  border-bottom: 1px solid #ff0000;
+}
+
+.modal__error {
+  font-size: 12px;
+  line-height: 15px;
+  color: #ff0000;
+  position: absolute;
+  top: 37.5px;
+  transition: opacity 0.3s;
+  z-index: 999990;
+}
+
+.modal__input_type_description {
 }
 
 .modal__save-button {
