--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -68,14 +68,95 @@
   overflow: hidden;
 }
 
+.avatar1 {
+  position: relative;
+  margin-right: 30px;
+}
+
+.avatar__button {
+  /* content: " "; */
+  cursor: pointer;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-image: url("../images/avatarEditIcon.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 50%;
+  opacity: 0;
+  border: none;
+  box-sizing: border-box;
+}
+
+.avatar__button {
+  cursor: pointer;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: transparent; /* Ensure background is transparent */
+  border: none; /* Remove any default button borders */
+  border-radius: 50%;
+  padding: 0; /* Remove any default padding */
+  margin: 0; /* Remove any default margin */
+  box-sizing: border-box; /* Include padding and border in the element's total width and height */
+  opacity: 0;
+  outline: none; /* Remove the default focus outline */
+}
+
+.avatar__button:hover {
+  background-image: url("../images/avatarEditIcon.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: black;
+  opacity: 0.7;
+  transition: opacity 0.3s;
+}
+
 .profile__image {
+  position: relative;
   height: 120px;
   width: 120px;
   border-radius: 50%;
   object-fit: cover;
   background-position: center;
-  margin-right: 30px;
+  /* margin-right: 30px; */
 }
+
+/* .profile__image:hover {
+    color: #333;
+    /* background-image: url("../images/add-vector.svg"); 
+  }*/
+
+/* .profile__image::after {
+}
+
+.profile__image:hover::after {
+  opacity: 1 !important;
+} */
+
+/* .profile__image::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-image: url("../images/add-vector.svg");
+    background-size: cover;
+    background-position: center;
+    opacity: 0;
+    transition: opacity 0.3s;
+    background-color: rgba(255, 0, 0, 0.5);
+  }
+
+  .profile__image:hover::after {
+    opacity: 1;
+  } */
 
 @media screen and (max-width: 940px) {
   .profile__info {
